# simple-main

./: .gitignore  CMakeLists.txt  README.md  main,cpp
src/: CMakeLists.txt  main  main.cpp  treasure.cpp
